--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npx serve -l 3000"
   },
   "keywords": ["portfolio", "markdown", "minimal", "personal"],
-  "author": "Your Name",
+  "author": "Nishikanta Ray",
   "license": "MIT",
   "devDependencies": {
     "serve": "^14.2.1"
