--- a/config/projects.toml
+++ b/config/projects.toml
@@ -99,7 +99,7 @@ year = 2024
 # SEO and meta settings
 [seo]
 meta_description = "My projects - Developer, Designer, Creator"
-og_title = "Projects - Your Name"
+og_title = "Projects - Nishikanta Ray"
 og_description = "A showcase of my recent work in web development, design, and open source contributions."
 
 # Performance settings
