--- a/config/resume.toml
+++ b/config/resume.toml
@@ -5,7 +5,7 @@
 name = "Alex Johnson"
 title = "Senior Full Stack Developer"
 phone = "+1-555-123-4567"
-email = "nishikantaray@gmail.com"
+email = "alex.johnson@example.com"
 website = "https://alexjohnson.dev"
 github = "https://github.com/alexjohnson"
 linkedin = "https://linkedin.com/in/alexjohnson"
