Add Renderer CLI, docs, PWA, i18n, and image optimization
Introduces a professional CLI tool (bin/renderer.js) with commands for project scaffolding, content generation, validation, serving, building, deploying, and migration. Adds comprehensive documentation for the CLI and visual TOML editor, as well as a major update to docs.html detailing v2.1 features. Implements PWA support (sw.js, manifest.json, offline.html, js/sw-manager.js), advanced image optimization (js/image-optimizer.js), and internationalization (js/i18n.js, locales/*.json). Updates index.html and package.json to integrate new features. This release marks Renderer v2.1 as production-ready with significant improvements in performance, usability, and global reach.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,34 @@
 {
-  "name": "minimal-portfolio",
-  "version": "1.0.0",
-  "description": "A minimal personal portfolio using markdown to HTML converter",
+  "name": "renderer",
+  "version": "2.1.0",
+  "description": "Zero-build TOML-driven portfolio framework with AI-powered setup",
   "main": "index.html",
+  "bin": {
+    "renderer": "./bin/renderer.js"
+  },
   "scripts": {
     "dev": "npx serve -l 3000",
-    "start": "npx serve -l 3000"
+    "start": "npx serve -l 3000",
+    "serve": "node bin/renderer.js serve",
+    "build": "node bin/renderer.js build",
+    "validate": "node bin/renderer.js validate"
   },
-  "keywords": ["portfolio", "markdown", "minimal", "personal"],
+  "keywords": [
+    "portfolio",
+    "toml",
+    "minimal",
+    "personal",
+    "static-site",
+    "zero-build",
+    "mcp",
+    "ai-powered"
+  ],
   "author": "Nishikanta Ray",
   "license": "MIT",
   "devDependencies": {
     "serve": "^14.2.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
